app/static/css/main.css
/* ... */
.th-subbar ul li a {
  color: #eee;
  font-size: .9em;
}

.th-subbar ul li.editbar {
  margin: 0;
}

/* /SUB BAR STYLES */

/* SIDEBAR STYLES */

.sidebar {
    padding: 1em 5px 5px 5px;
    overflow-wrap: break-word;
    border-left: solid 1px #e2e2e2;
    border-right: dotted 1px #ccc;
    position: relative!important;
}

.sidebar h4 {
  color: #1b1b1b;
  margin: 0;
}

.sidebar ul {
  margin-top: .2em;
}

.sidebarlists ul {
    padding: 0 14px 0 18px;
    font-weight: normal;
    text-align: left;
    font-size: 14px;
}

.sidebarlists ul li  {
  padding-top: 8px;
}

.sidebar h4 {
  padding-top: 3px;
}

.sidebarlists {
   color: #5d5454;
   }

.sbm-post {
  display: block;
  margin: 5px;
}

.sbm-icon {
  position: relative;
  padding-left: 1em;
}

.sbm-icon svg {
  height: 16px;
  position: absolute;
  left: -.5em;
  top: 50%;
  transform: translateY(-50%);
}

.button-secondary svg {
  fill: white;
}

hr {
  border: 0;
  border-bottom: 1px dotted #a6a6a6;
  background: transparent;
}

.top5 {
  padding-left: 1.4em;
  font-size: 14px;
}

.sidelocale {
  font-size: 12px;
}

.sidescore {
  font-size: 12px;
/**  font-weight: bold;
  margin-right: 4px; **/
  color: var(--primary-color);
}

input[type=search] {
  box-sizing: border-box;
  border: solid lightgray 1px;
  border-radius: 4px;
  font-size: .9em;
  background-color: white;
  padding: 12px 15px 10px 35px;
  -webkit-transition: width .4s ease-in-out;
  transition: width .4s ease-in-out;
  margin: 5px;
}
.search {
  width: 91%;
  margin-left: 23px;
  position: relative;
  color: #000;
  font-size: 16px;
}

.search .icon {
  position: absolute;
  top: .5em;
  left: .8em;
  height: 24px;
  width: 24px;
}

.search .icon path {
  fill: darkgray;
}

.flairpicker select {
  box-sizing: border-box;
  border: solid lightgray 1px;
  border-radius: 4px;
  font-size: .9em;
  background-color: white;
  -webkit-transition: width .4s ease-in-out;
  transition: width .4s ease-in-out;
  margin: 10px 5px 5px 5px;
}

/* /SIDEBAR STYLES */

/* CREATE POST PAGE STYLES */

@media (max-width: 35.5em) {
    .content.createpost {
      width: 90%;
    }

    .createpost input#title, .createpost input#link, textarea#content, input#subject, form#msg-form .editbtns {
        width: 100%;
    }
    .motto {
        display: none;
    }
    .post .author {
        line-height: 1.7em;
    }
    .misctainer {
        padding: 0;
    }
    .pbody {
        width: calc(100% - 105px);
    }
    .content.wiki {
        width: 95%;
    }
}

#createPostIcon {
    position: absolute;
    top: .5em;
    right: 3.2em;
    width: 28px;
    height: 28px;
    display: none;
}

@media (max-width: 47.999em) {
    #createPostIcon {
      display: block !important;
    }
}

#createPostIcon svg {
    height: inherit;
}

@media (min-width: 35.5em) {
    .content.createpost {
      width: 700px;
    }
    .createpost input#title, .createpost input#link, .createpost textarea#content {
        width: calc(100% - 11em);
    }
    .pure-control-group .markdown-editor {
        width: calc(100% - 11em);
    }
    .content.wiki {
        width: 65%;
    }
}

.createpost input.sbm-poll-opt {
  margin-right: 1em;
  width: 50%;
}

.post-types-opts {
  padding-bottom: 1em;
}

/* / CREATE POST PAGE STYLES */

/* POST PAGE STYLES */

.postbar {
  white-space: nowrap;
  min-height: 70px;
}

.postbar * {
  white-space: normal;
}

.wholepost .title {
  font-size: 1.2em;
}

.wholepost .author {
  font-size: small;
  color: #5d5454;
  margin-top: 0.3em;
}

.post-content-container {
  background: #f6f6f6;
  border: solid;
  border-width: thin;
  border-color: #888888;
  margin-left: 1em;
  margin-right: 1.1em;
  padding: .4em 1em;
  /* 1px margin on botton and top so it respects <p>'s margin */
  font-family: verdana,arial,sans-serif;
  font-size: 15px;
  line-height: 1.3em;
  width: 90%;
}

.poll-space {
  padding: .4em 1em;
  margin-left: 1em;
  margin-right: 1.1em;
  margin-top: 1.1em;
  font-family: verdana,arial,sans-serif;
  font-size: 15px;
  line-height: 1.3em;
}

.post-content-container textarea, .commblock textarea, .comment-form textarea {
  resize: vertical;
  width: 100%;
  overflow: auto;
}

.cwrap, .pure-control-group .markdown-editor.cwrap {
  margin-top: 5px;
  width: 100%;
}

div.comments {
  padding-right: 8px;
}

.show-post-comments {
    margin-left: 15px;
}

.pchild {
  margin-left: 26px;
  border-left: 1px dotted #cecece;
}

.pchild-e {
  margin-left: 26px;
}

.commentrow {
  margin-left: 7px;
}

div.commentContent {
    padding-bottom: 5px;
}

div.commentContent p {
  margin-top: .45em;
  margin-bottom: .45em;
}

article.comment .score{
  margin: 0;
  line-height: 15px;
}

/* /POST PAGE STYLES */

/* EDITOR STYLES */

.editbtns {
  height: 26px;
  margin-top: 2px;
  padding-left: .2em;
  width: 100%;
  border: 1px solid #ccc;
}

.editbtns .separator {
  border: none;
}

.editbtns div {
  margin-top: 2px;
  display: inline-block;
  height: 20px;
  width: 20px;
  margin-right: 6px;
  text-align: center;
  padding-top: 1px;
}

.editbtns div:hover {
  background: #ccc;
}

.editbtns div svg {
  height: 18px;
}

.markdown-editor textarea {
  padding-top: .3em;
  border-top: none;
  margin-top: 0;
  box-shadow: none;
  border-top-left-radius: unset;
  border-top-right-radius: unset;
  width: 100%
}

/* /EDITOR STYLES */

/* MESSAGES STYLES */

.center-container .content {
  max-width: 100%;
}

.pmessage.post p.title {
  border-bottom: 1px solid #c8c8c8;
  margin-left: 30px;
}

.pmessage.post {
  min-height: 70px;
  padding: .8em;
  border-radius: 8px 0 0 8px;
  background-color: #fefefe;
  -webkit-box-shadow: -3px 2px 4px 0 rgba(0, 0, 0, .1);
  -moz-box-shadow: -3px 2px 4px 0 rgba(0, 0, 0, .1);
  box-shadow: -3px 2px 4px 0 rgba(0, 0, 0, .1);
  margin: 8px 0;
}

.pmessage.post:nth-child(2n) {
  background-color: #ffffff;
  -webkit-box-shadow: -3px 2px 4px 0 rgba(0, 0, 0, .1);
  -moz-box-shadow: -3px 2px 4px 0 rgba(0, 0, 0, .1);
  box-shadow: -3px 2px 4px 0 rgba(0, 0, 0, .1);
}
/* ... */

